# gradio-calendar

./: .gitignore  README.md  pyproject.toml
backend/gradio_calendar/: __init__.py  calendar.py
backend/gradio_calendar/templates/component/: index.js  style.css
backend/gradio_calendar/templates/example/: index.js
demo/: app.py
frontend/: Index.svelte  package-lock.json  package.json
