[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_calendar"
version = "0.0.6"
description = "Gradio component for selecting dates with a calendar 📆"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "YOUR NAME", email = "YOUREMAIL@domain.com" }]
keywords = ["gradio-custom-component", "gradio-template-Fallback", "time", "calendar", "forms"]
# Add dependencies here
dependencies = ["gradio>=4.0,<6.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
repository = "https://github.com/freddyaboulton/gradio-calendar"
space = "https://huggingface.co/spaces/freddyaboulton/gradio_calendar"

[tool.hatch.build]
artifacts = ["/backend/gradio_calendar/templates", "*.pyi", "backend/gradio_calendar/templates", "backend/gradio_calendar/templates", "backend/gradio_calendar/templates", "backend/gradio_calendar/templates", "backend/gradio_calendar/templates", "backend/gradio_calendar/templates", "backend/gradio_calendar/templates", "backend/gradio_calendar/templates", "backend/gradio_calendar/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_calendar"]
